--- a/UI.html
+++ b/UI.html
@@ -142,6 +142,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">form elements</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <div class="form-checkbox flex-shrink-0 rounded-pill position-relative overflow-hidden">
+                                        <input type="checkbox" name="" checked id="" class="position-absolute start-0 top-0 w-100 h-100">
+                                        <span class="rounded-pill position-absolute"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
